# sw-test-project

./: .gitignore  CMakeLists.txt  commands_example2.txt  Пояснительная записка.md
src/: main.cpp
src/Essentials/: Position.hpp  Random.hpp
src/Game/: Component.hpp  GameContext.hpp  Map.cpp  Map.hpp  Simulation.cpp  Simulation.hpp  Unit.cpp  Unit.hpp  UnitManager.cpp  UnitManager.hpp
src/Game/Components/: HealthComponent.cpp  HealthComponent.hpp  MeleeAttackComponent.cpp  MeleeAttackComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  RangedAttackComponent.cpp  RangedAttackComponent.hpp
